--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<h1>Hello, Wrold!</h1>
+<!doctype html>
+<html>
+	<head>
+		<meta charset="utf-8">
+ 		<title>My First Awesome Site</title>
+	</head>
+	<body>
+		<h1>Sup, yo.</h1>
+		<p>
+			This is a paragraph, yos!
+		</p>
+		<img src="https://media.giphy.com/media/Urmz994d0TNJK/giphy.gif" />
+		<img src="images/robot.gif" />
+	</body>
+</html>
